// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropList 1`] = `
<div
  class="DropListstyles__Box-sc-13y1c16-0 fcLHZl"
  role="listbox"
>
  <div
    aria-disabled="false"
    aria-selected="false"
    class="Itemstyles__Box-k6ty0u-0 ilhkJW"
    role="option"
  >
    Item 1
  </div>
  <div
    aria-disabled="false"
    aria-selected="false"
    class="Itemstyles__Box-k6ty0u-0 ilhkJW"
    role="option"
  >
    Very very long Item 2
  </div>
  <div
    aria-disabled="true"
    aria-selected="false"
    class="Itemstyles__Box-k6ty0u-0 dXjEM"
    disabled=""
    role="option"
  >
    Item 3
  </div>
  <div
    aria-disabled="false"
    aria-selected="false"
    class="Itemstyles__Box-k6ty0u-0 ilhkJW"
    role="option"
  >
    Item 4
  </div>
  <div
    aria-disabled="false"
    aria-selected="true"
    class="Itemstyles__Box-k6ty0u-0 kNKjCm"
    role="option"
    selected=""
  >
    Item 5
  </div>
  <div
    aria-disabled="false"
    aria-selected="false"
    class="Itemstyles__Box-k6ty0u-0 ilhkJW"
    role="option"
  >
    Item 6
  </div>
  <div
    aria-disabled="false"
    aria-selected="false"
    class="Itemstyles__Box-k6ty0u-0 ilhkJW"
    role="option"
  >
    Item 7
  </div>
</div>
`;

exports[`DropList w/ size 1`] = `
Array [
  <div
    class="DropListstyles__Box-sc-13y1c16-0 fcLHZl"
    role="listbox"
  >
    <div
      aria-disabled="false"
      aria-selected="false"
      class="Itemstyles__Box-k6ty0u-0 fMwtem"
      role="option"
    >
      Item 1
    </div>
    <div
      aria-disabled="false"
      aria-selected="false"
      class="Itemstyles__Box-k6ty0u-0 fMwtem"
      role="option"
    >
      Very very long Item 2
    </div>
    <div
      aria-disabled="true"
      aria-selected="false"
      class="Itemstyles__Box-k6ty0u-0 lprVrk"
      disabled=""
      role="option"
    >
      Item 3
    </div>
    <div
      aria-disabled="false"
      aria-selected="false"
      class="Itemstyles__Box-k6ty0u-0 fMwtem"
      role="option"
    >
      Item 4
    </div>
    <div
      aria-disabled="false"
      aria-selected="true"
      class="Itemstyles__Box-k6ty0u-0 jjbBDy"
      role="option"
      selected=""
    >
      Item 5
    </div>
    <div
      aria-disabled="false"
      aria-selected="false"
      class="Itemstyles__Box-k6ty0u-0 fMwtem"
      role="option"
    >
      Item 6
    </div>
    <div
      aria-disabled="false"
      aria-selected="false"
      class="Itemstyles__Box-k6ty0u-0 fMwtem"
      role="option"
    >
      Item 7
    </div>
  </div>,
  <div
    class="DropListstyles__Box-sc-13y1c16-0 fcLHZl"
    role="listbox"
  >
    <div
      aria-disabled="false"
      aria-selected="false"
      class="Itemstyles__Box-k6ty0u-0 ilhkJW"
      role="option"
    >
      Item 1
    </div>
    <div
      aria-disabled="false"
      aria-selected="false"
      class="Itemstyles__Box-k6ty0u-0 ilhkJW"
      role="option"
    >
      Very very long Item 2
    </div>
    <div
      aria-disabled="true"
      aria-selected="false"
      class="Itemstyles__Box-k6ty0u-0 dXjEM"
      disabled=""
      role="option"
    >
      Item 3
    </div>
    <div
      aria-disabled="false"
      aria-selected="false"
      class="Itemstyles__Box-k6ty0u-0 ilhkJW"
      role="option"
    >
      Item 4
    </div>
    <div
      aria-disabled="false"
      aria-selected="true"
      class="Itemstyles__Box-k6ty0u-0 kNKjCm"
      role="option"
      selected=""
    >
      Item 5
    </div>
    <div
      aria-disabled="false"
      aria-selected="false"
      class="Itemstyles__Box-k6ty0u-0 ilhkJW"
      role="option"
    >
      Item 6
    </div>
    <div
      aria-disabled="false"
      aria-selected="false"
      class="Itemstyles__Box-k6ty0u-0 ilhkJW"
      role="option"
    >
      Item 7
    </div>
  </div>,
  <div
    class="DropListstyles__Box-sc-13y1c16-0 fcLHZl"
    role="listbox"
  >
    <div
      aria-disabled="false"
      aria-selected="false"
      class="Itemstyles__Box-k6ty0u-0 iHRAyY"
      role="option"
    >
      Item 1
    </div>
    <div
      aria-disabled="false"
      aria-selected="false"
      class="Itemstyles__Box-k6ty0u-0 iHRAyY"
      role="option"
    >
      Very very long Item 2
    </div>
    <div
      aria-disabled="true"
      aria-selected="false"
      class="Itemstyles__Box-k6ty0u-0 hnuRlK"
      disabled=""
      role="option"
    >
      Item 3
    </div>
    <div
      aria-disabled="false"
      aria-selected="false"
      class="Itemstyles__Box-k6ty0u-0 iHRAyY"
      role="option"
    >
      Item 4
    </div>
    <div
      aria-disabled="false"
      aria-selected="true"
      class="Itemstyles__Box-k6ty0u-0 jWHsis"
      role="option"
      selected=""
    >
      Item 5
    </div>
    <div
      aria-disabled="false"
      aria-selected="false"
      class="Itemstyles__Box-k6ty0u-0 iHRAyY"
      role="option"
    >
      Item 6
    </div>
    <div
      aria-disabled="false"
      aria-selected="false"
      class="Itemstyles__Box-k6ty0u-0 iHRAyY"
      role="option"
    >
      Item 7
    </div>
  </div>,
]
`;

exports[`DropList.Item /w disabled 1`] = `
<div
  aria-disabled="true"
  aria-selected="false"
  class="Itemstyles__Box-k6ty0u-0 dXjEM"
  disabled=""
  role="option"
>
  Item 1
</div>
`;

exports[`DropList.Item /w selected 1`] = `
<div
  aria-disabled="false"
  aria-selected="true"
  class="Itemstyles__Box-k6ty0u-0 kNKjCm"
  role="option"
  selected=""
>
  Item 1
</div>
`;

exports[`DropList.Item 1`] = `
<div
  aria-disabled="false"
  aria-selected="false"
  class="Itemstyles__Box-k6ty0u-0 ilhkJW"
  role="option"
>
  Item 1
</div>
`;
